# hrtb-logic

./: .gitignore  Cargo.toml  LICENSE
src/: dnf.rs  form.rs  lib.rs  nnf.rs  short.rs  simp.rs  tests.rs  util.rs  var.rs  visit.rs
src/qe/: atomless.rs  mod.rs
src/snapshots/: hrtb_logic__tests__dnf-3.snap
