[package]
name = "hrtb-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = "0.6.2"
itertools = "0.10.1"
paste = "1.0.6"
tracing = "0.1.29"

[dev-dependencies]
insta = "1.8.0"
proptest = "1.0.0"
tracing-test = "0.1.0"
